<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ExtraJob</string>
    <string name="dialog_title">Fecha de Nacimiento</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Perfil</string>
    <string name="title_activity_menue">Menu de Usuario</string>
    <string name="title_activity_menu">Menu de Empresa</string>
    <string name="publicar_oferta">Publicar Oferta</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="fecha_26_04_2019">Fecha 26/04/2019</string>
    <string name="horario">Horario</string>
    <string name="direccion">Direccion</string>
    <string name="remuneracion">Tarifa</string>
    <string name="registar">Registar</string>
    <string name="empresa">Empresa</string>
    <string name="usuario">Usuario</string>
    <string name="todo">iconoj</string>
    <string name="icono_extrajob">icono extrajob</string>
    <string name="icono_empresa">icono empresa</string>
    <string name="icono_empleado">icono empleado</string>
    <string name="reg_strate">Regístrate</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="no_est_s_registrado">¿No estás Registrado?</string>
    <string name="iconoj">iconoj</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="_16_04_2019" tools:ignore="TypographyDashes">16-04-2019</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="documento_de_identidad">Documento de Identidad</string>
    <string name="ciudad">Ciudad</string>
    <string name="icoj">icoj</string>
    <string name="iconofech">iconofech</string>
    <string name="ocupaciones">ocupaciones</string>
    <string name="ocupacion_o_cargo">Cargo</string>
    <string name="raz_n_social">Razón Social</string>
    <string name="persona_de_contacto">nombre completo responsable</string>
    <string name="nombrecompleto">Nombre y Apellidos</string>
    <string name="identidad">Identificacion</string>
    <string name="ceular">Celular</string>
    <string name="nit">NIT</string>
    <string name="direcci_n_principal">Dirección Principal</string>
    <string name="ij">ij</string>
    <string name="actividad_econ_mica">Actividad Económica</string>
    <string name="direcci_n_electr_nica">Correo electrónico</string>
    <string name="iexra">iexra</string>
    <string name="telefonoc">Teléfono celular</string>
    <string name="telefonof">Teléfono fijo</string>
    <string name="clave">Crear Contraseña</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ofertas_activas">Ofertas Activas</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="textview">TextView</string>
    <string name="cargar_documentos">Camara de comercio</string>
    <string name="camara_de_comercio_y_reprentante_legal_en_un_pdf">camara de comercio y reprentante legal en un pdf</string>
    <string name="seleccione_categoria">Seleccione Categoria</string>
    <string name="categoria">Categoria</string>
    <string name="_26_04_2019">26-04-2019</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email1">Email:</string>
    <string name="nombre1">Nombre:</string>
    <string name="ocupaciones1">ocupaciones:</string>
    <string name="ciudad1">Ciudad:</string>
    <string name="fecha_de_nacimiento1">Fecha de Nacimiento:</string>
    <string name="telefono1">Telefono:</string>
    <string name="documento1">Documento:</string>
    <string name="informacion_general_de_su_perfil1">Informacion general de su perfil</string>
    <string name="fotocopia_representante_legal">Fotocopia Representante legal</string>
    <string name="fotocopia_del_rut">Fotocopia del Rut</string>
    <string name="ofertas_concluidas">Ofertas Concluidas</string>
    <string name="url_empresa_opcional">Url empresa</string>
    <string name="aceptar_terminos">Aceptar Terminos</string>
    <string name="terminos_y_condiciones">- Terminos y Condiciones</string>


</resources>
