<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Registroe">

    <EditText
        android:id="@+id/car"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/ocupacion_o_cargo"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pc"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tele"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/tele"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/ae"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/actividad_econ_mica"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/direcci_n_electr_nica"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dir"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/dir"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/direcci_n_principal"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ae"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/pc"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/persona_de_contacto"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nit"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/nit"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/nit"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rs"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/rs"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:hint="@string/raz_n_social"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:autofillHints="" tools:targetApi="o" />

    <Button
        android:id="@+id/bregistroe"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:background="@color/colorPrimary"
        android:text="@string/reg_strate"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/ij"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="161dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/iexra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/extrajob" />

</android.support.constraint.ConstraintLayout>