<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Publicar_Ofertas_Activity">

    <!-- Toolbar -->
    <Spinner
        android:id="@+id/spinner_sect2"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinner_style"
        android:ems="10"
        android:padding="6dp"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        tools:ignore="Autofill,RtlSymmetry" />

    <Spinner
        android:id="@+id/spinner_profesiones2"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:padding="6dp"
        android:background="@drawable/spinner_style"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        android:theme="@style/CampoTextoPurpura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sect2"
        tools:ignore="Autofill,RtlSymmetry" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colormorado"
        app:popupTheme="@style/AppThemesin.PopupOverlay"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editdescripcion"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:paddingLeft="10dp"
        android:focusable="auto"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:background="@drawable/backwithborder"
        android:textColorHint="#673AB6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_profesiones2"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editdireccion"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/direccion"
        android:paddingLeft="10dp"
        android:background="@drawable/backwithborder"
        android:inputType="textPersonName"
        android:textColorHint="#673AB6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editdescripcion"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editremuneracion"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/remuneracion"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColorHint="#673AB6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editdireccion"
        tools:targetApi="o" />

    <Button
        android:id="@+id/bregistrar_oferta"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        android:background="#009688"
        android:text="@string/registar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>