<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carV_ofertas_finalizadas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/titulocm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:text="@string/titulo"
            android:textColor="#030303"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descripcioncm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:inputType="textMultiLine"
            android:text="descripcion"
            android:textColor="#030303"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulocm"
            tools:ignore="HardcodedText,TextViewEdits" />

        <TextView
            android:id="@+id/direccioncm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:text="direccion"
            android:textColor="#571F79"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcioncm"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/fechacm"
            android:layout_width="260dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:text="@string/fecha_26_04_2019"
            android:textColor="#571F79"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/direccioncm" />

        <TextView
            android:id="@+id/horariocm"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/horario"
            android:textColor="#571F79"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechacm" />

        <TextView
            android:id="@+id/remuneracioncm"
            android:layout_width="260dp"
            android:layout_height="22dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/remuneracion"
            android:textColor="#EBE8F0"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horariocm" />

        <Button
            android:id="@+id/bpostularse"
            android:layout_width="84dp"
            android:layout_height="33dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colormorado"
            android:text="Empleado"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/horariocm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/horariocm"
            app:layout_constraintTop_toTopOf="@+id/horariocm"
            tools:ignore="HardcodedText" />

    </android.support.constraint.ConstraintLayout>


</android.support.design.card.MaterialCardView>